app/globals.css
@import "tailwindcss";

/* Make Tailwind’s `dark:` use [data-mode="dark"] instead of system media query */
@custom-variant dark (&:where([data-mode=dark], [data-mode=dark] *));

/* colors */

@theme {
  --color-purple: #635fc7;
  --color-purple-hover: #a8a4ff;
  --color-black: #000112;
  --color-very-dark-grey: #20212c;
  --color-dark-grey: #2b2c37;
  --color-dark: #3e3f4e;
  --color-medium-grey: #828fa3;
  --color-light: #e4ebfa;
  --color-light-grey: #f4f7fd;
  --color-white: #ffffff;
  --color-red: #ea5555;
  --color-red-hover: #ff9898;
}

/* typography */

@layer {
  .heading-xl {
    font-weight: 700;
    font-size: 24px;
    line-height: 30px;
  }
  .heading-l {
    font-weight: 700;
    font-size: 18px;
    line-height: 23px;
  }
  .heading-m {
    font-weight: 700;
    font-size: 15px;
    line-height: 19px;
  }
  .heading-s {
    font-weight: 700;
    font-size: 12px;
    line-height: 15px;
    letter-spacing: 2.4px;
  }
  .body-l {
    font-weight: 500;
    font-size: 13px;
    line-height: 23px;
  }
  .body-m {
    font-weight: 700;
    font-size: 12px;
    line-height: 15px;
  }
}

@layer components {
  .spinner {
    margin: 3.2rem auto 1.6rem;
    width: 40px;
    aspect-ratio: 1;
    border-radius: 50%;
    border: 6px solid theme("colors.neutral.500");
    border-right-color: theme("colors.neutral.200");
    animation: rotate 1s infinite linear;
  }
  .spinner-mini {
    margin: 0;
    width: 20px;
    aspect-ratio: 1;
    border-radius: 50%;
    border: 2px solid theme("--color-neutral-300");
    border-right-color: transparent;
    animation: rotate 1s infinite linear;
  }

  @keyframes rotate {
    to {
      transform: rotate(1turn);
    }
  }
}

